--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,6 +40,11 @@
     h3 {
         font: large mukta, 'ui-sans-serif', 'sans-serif';
     }
+
+    p {
+        line-height: 1.6;
+        margin-block: 1em 1em;
+    }
 }
 
 .light {
